# Game

./: CMakeLists.txt  CMakePresets.json  README.md  a.out  combatants.cpp  combatants.h  combatents.cpp  combatents.h  dread.cpp  dread.h  fight.cpp  fight.h  main.cpp  main.h  math.cpp  math.h  sleep.cpp  sleep.h  stats.txt
stories/doggy/: doggy.txt
stories/jokes/: c.txt  jokes.txt
stories/poo/: a.txt  poo.txt
stories/robot/: a.txt  b.txt  c.txt  robot.txt
stories/space/: aa.txt  bb.txt
